# dev

./: README.md
books/django_a_z/medicSearch/: admin.py
books/django_a_z/medicSearch/forms/: AuthForm.py  MedicForm.py  UserProfileForm.py
books/django_a_z/medicSearch/migrations/: 0001_initial.py  0002_address_city_dayweek_speciality_state_and_more.py  (+2 more)
books/django_a_z/medicSearchAdmin/: db.sqlite3  urls.py
books/django_for_web/: docker-compose.yml
books/django_for_web/task_manager/: pyproject.toml
books/django_for_web/task_manager/taskmanager/: mydatabase
books/django_for_web/task_manager/taskmanager/taskmanager/: settings.py
books/django_for_web/task_manager/taskmanager/tasks/: admin.py  models.py  urls.py  views.py
books/django_for_web/task_manager/taskmanager/tasks/migrations/: 0001_initial.py  0002_rename_creator_task_owner.py  0003_auto_20250205_1807.py  0004_alter_task_table_comment_sprint_epic_task_epic_and_more.py  0005_task_status_check.py  0006_remove_task_status_check_task_status_check.py  0007_remove_sprint_end_date_after_start_date_and_more.py
books/django_for_web/task_manager/taskmanager/templates/: _header.html  base.html
books/django_for_web/task_manager/taskmanager/templates/tasks/: help.html  home.html  task_confirm_delete.html  task_detail.html  task_form.html  task_list.html
books/jogo_da_velha_oo/: controle.py  jogadores.py  main.py  tela.py
books/trilhas_python/: .gitignore
books/trilhas_python/dados/: dados.py
books/trilhas_python/jogo_da_velha/: jogo_da_velha.py
books/trilhas_python/web/: helloWorld.py
(+33 files in other folders)
